# frc2024

./: .deploy_cfg  .gitignore  README.md  Sean'sCopy.code-workspace  constants.py  controller.py  photonutils.py  pyproject.toml  robot.py  robotcontainer.py  vision.py
subsystems/: arm.py  mecanum.py  odometry.py  shooter.py  vision.py
tests/: pyfrc_test.py
