#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2024.3.1.0"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    # "apriltag",
    "commands2",
    # "cscore",
    "navx",
    # "pathplannerlib"
    # "phoenix5"
    # "phoenix6",
    # "playingwithfusion"
    "rev"
    # "romi"
    # "sim"
]

# Other pip packages to install
requires = ["photonlibpy==2024.2.4"]
[tool.poetry]
# package-install=false
name = "frc2024-main"
version = "0.1.0"
description = ""
authors = ["te <thrzl@icloud.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
robotpy = {version="^2024.3.2.1", extras=["commands2", "rev", "navx"]}


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
