[project]
name = "frc2024"
version = "0.1.0"
dependencies = [
    "photonlibpy>=2024.3.1",
    "ruff>=0.6.0",
    "robotpy[commands2,navx,rev]>=2024.3.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye.scripts]
format = "ruff format ."
lint = "ruff check ."
test = "robotpy test"
deploy = "robotpy deploy"
fdeploy = "robotpy deploy --skip-tests --no-verify"
precommit = "ruff format . && ruff check . && robotpy test"

[tool.pyright]
reportMissingTypeStubs = false

## robotpy configuration

[tool.robotpy]
requires = ["photonlibpy==2024.2.4"]
robotpy_version = "2024.3.2.1"

robotpy_extras = [
    # "all",
    # "apriltag",
    "commands2",
    # "cscore",
    "navx",
    # "pathplannerlib"
    # "phoenix5"
    # "phoenix6",
    # "playingwithfusion"
    "rev",
    # "romi"
    # "sim"
]